{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 165,
  "lineage": "88669fb2-66b9-3f4d-1596-bf4cc96d96f1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:423151037894:internet-gateway/igw-09345136df33bd928",
            "id": "igw-09345136df33bd928",
            "owner_id": "423151037894",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "terraform-bon-igw"
            },
            "tags_all": {
              "Name": "terraform-bon-igw"
            },
            "vpc_id": "vpc-0c559091c5a9a9b80"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bon-terra-private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:423151037894:route-table/rtb-0a0afeb65819ae987",
            "id": "rtb-0a0afeb65819ae987",
            "owner_id": "423151037894",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Name": "terra-private1"
            },
            "tags_all": {
              "Name": "terra-private1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c559091c5a9a9b80"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bon-terra-public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:423151037894:route-table/rtb-035db7c75e36b045a",
            "id": "rtb-035db7c75e36b045a",
            "owner_id": "423151037894",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09345136df33bd928",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terra-public1"
            },
            "tags_all": {
              "Name": "terra-public1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c559091c5a9a9b80"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.terra-igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pri1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f7f576812fcf641",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0a0afeb65819ae987",
            "subnet_id": "subnet-0a6bd45a22f2bc826"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.bon-terra-private1",
            "aws_subnet.bon-terraform-subnet-private1",
            "aws_subnet.bon-terraform-subnet-private2",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "pri2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d0716caae738ec6",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0a0afeb65819ae987",
            "subnet_id": "subnet-03b42680a6024de50"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.bon-terra-private1",
            "aws_subnet.bon-terraform-subnet-private1",
            "aws_subnet.bon-terraform-subnet-private2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029980ea7a7f97e54",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-035db7c75e36b045a",
            "subnet_id": "subnet-00cee7b36d6f52d93"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.terra-igw",
            "aws_route_table.bon-terra-public1",
            "aws_subnet.bon-terraform-subnet-public1",
            "aws_subnet.bon-terraform-subnet-public2",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "pub2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e22a7994481d3ac7",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-035db7c75e36b045a",
            "subnet_id": "subnet-0dfa0dd5f71d77873"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.terra-igw",
            "aws_route_table.bon-terra-public1",
            "aws_subnet.bon-terraform-subnet-public1",
            "aws_subnet.bon-terraform-subnet-public2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bon-terraform-subnet-private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:423151037894:subnet/subnet-0a6bd45a22f2bc826",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6bd45a22f2bc826",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423151037894",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "terra-sub-private1"
            },
            "tags_all": {
              "Name": "terra-sub-private1"
            },
            "vpc_id": "vpc-0c559091c5a9a9b80"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bon-terraform-subnet-private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:423151037894:subnet/subnet-03b42680a6024de50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.40.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b42680a6024de50",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423151037894",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "terra-sub-private2"
            },
            "tags_all": {
              "Name": "terra-sub-private2"
            },
            "vpc_id": "vpc-0c559091c5a9a9b80"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bon-terraform-subnet-public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:423151037894:subnet/subnet-00cee7b36d6f52d93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00cee7b36d6f52d93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "423151037894",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "terra-sub-public1"
            },
            "tags_all": {
              "Name": "terra-sub-public1"
            },
            "vpc_id": "vpc-0c559091c5a9a9b80"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bon-terraform-subnet-public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:423151037894:subnet/subnet-0dfa0dd5f71d77873",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dfa0dd5f71d77873",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "423151037894",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "terra-sub-public2"
            },
            "tags_all": {
              "Name": "terra-sub-public2"
            },
            "vpc_id": "vpc-0c559091c5a9a9b80"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:423151037894:vpc/vpc-0c559091c5a9a9b80",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0405e54c6dfca0aa3",
            "default_route_table_id": "rtb-0007b2fd130a06b22",
            "default_security_group_id": "sg-06a1630f0ad56191c",
            "dhcp_options_id": "dopt-0f870df076a90f37f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c559091c5a9a9b80",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0007b2fd130a06b22",
            "owner_id": "423151037894",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "vpc"
            },
            "tags_all": {
              "Name": "vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.bastion_terra_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-04fcc2023d6e37430",
            "arn": "arn:aws:ec2:ap-northeast-2:423151037894:instance/i-09807c6c693535023",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09807c6c693535023",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra_myce_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0426bd2a9e6dec191"
              }
            ],
            "primary_network_interface_id": "eni-0426bd2a9e6dec191",
            "private_dns": "ip-10-0-10-154.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.154",
            "public_dns": "ec2-3-38-252-82.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.38.252.82",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-034cd8bdb6d85a9c9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00cee7b36d6f52d93",
            "tags": {
              "Name": "myce_bastion_terra"
            },
            "tags_all": {
              "Name": "myce_bastion_terra"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ecb51db21832e19b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.myce_keypair",
            "aws_subnet.bon-terraform-subnet-public1",
            "aws_vpc.vpc",
            "module.sg_groups.aws_security_group.myce_sg_bastion",
            "tls_private_key.myce"
          ]
        }
      ]
    },
    {
      "module": "module.nat_terra_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-04fcc2023d6e37430",
            "arn": "arn:aws:ec2:ap-northeast-2:423151037894:instance/i-05d060d1159a6b162",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05d060d1159a6b162",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra_myce_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-08899d90553a947c7"
              }
            ],
            "primary_network_interface_id": "eni-08899d90553a947c7",
            "private_dns": "ip-10-0-10-47.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.47",
            "public_dns": "ec2-13-125-6-20.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.125.6.20",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00782157c2f221f83",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00cee7b36d6f52d93",
            "tags": {
              "Name": "myce_nat_terra"
            },
            "tags_all": {
              "Name": "myce_nat_terra"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-037c5b2a31a4c9011"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.myce_keypair",
            "aws_subnet.bon-terraform-subnet-public1",
            "aws_vpc.vpc",
            "module.sg_groups.aws_security_group.myce_sg_nat",
            "tls_private_key.myce"
          ]
        }
      ]
    },
    {
      "module": "module.private_terra_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-04fcc2023d6e37430",
            "arn": "arn:aws:ec2:ap-northeast-2:423151037894:instance/i-0b681e314b50720ed",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b681e314b50720ed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra_myce_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0fa19cc59cc2ebd52"
              }
            ],
            "primary_network_interface_id": "eni-0fa19cc59cc2ebd52",
            "private_dns": "ip-10-0-30-193.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.30.193",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-098dcc9b53b0e2d68",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6bd45a22f2bc826",
            "tags": {
              "Name": "myce_private_terra"
            },
            "tags_all": {
              "Name": "myce_private_terra"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-053e972ea36b36908"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.myce_keypair",
            "aws_subnet.bon-terraform-subnet-private1",
            "aws_vpc.vpc",
            "module.sg_groups.aws_security_group.myce_sg",
            "tls_private_key.myce"
          ]
        }
      ]
    },
    {
      "module": "module.public_terra_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-04fcc2023d6e37430",
            "arn": "arn:aws:ec2:ap-northeast-2:423151037894:instance/i-002fb3787d16cbfac",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-002fb3787d16cbfac",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra_myce_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0de1dd2494b1f6c59"
              }
            ],
            "primary_network_interface_id": "eni-0de1dd2494b1f6c59",
            "private_dns": "ip-10-0-10-36.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.36",
            "public_dns": "ec2-43-202-45-201.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.202.45.201",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-077f681f00b9121d7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00cee7b36d6f52d93",
            "tags": {
              "Name": "myce_public_terra"
            },
            "tags_all": {
              "Name": "myce_public_terra"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-075797ab705810c96"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.myce_keypair",
            "aws_subnet.bon-terraform-subnet-public1",
            "aws_vpc.vpc",
            "module.sg_groups.aws_security_group.myce_sg_public",
            "tls_private_key.myce"
          ]
        }
      ]
    },
    {
      "module": "module.sg_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myce_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:423151037894:security-group/sg-053e972ea36b36908",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-053e972ea36b36908",
            "ingress": [],
            "name": "terra_private_sg",
            "name_prefix": "",
            "owner_id": "423151037894",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c559091c5a9a9b80"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myce_sg_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:423151037894:security-group/sg-0ecb51db21832e19b",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ecb51db21832e19b",
            "ingress": [],
            "name": "terra_bastion_sg",
            "name_prefix": "",
            "owner_id": "423151037894",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c559091c5a9a9b80"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myce_sg_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:423151037894:security-group/sg-037c5b2a31a4c9011",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-037c5b2a31a4c9011",
            "ingress": [],
            "name": "terra_nat_sg",
            "name_prefix": "",
            "owner_id": "423151037894",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c559091c5a9a9b80"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myce_sg_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:423151037894:security-group/sg-075797ab705810c96",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-075797ab705810c96",
            "ingress": [],
            "name": "terra_public_sg",
            "name_prefix": "",
            "owner_id": "423151037894",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c559091c5a9a9b80"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_security_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2164662307",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-2",
            "security_group_id": "sg-0ecb51db21832e19b",
            "security_group_rule_id": "sgr-07a43e9d2074073eb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc",
            "module.sg_groups.aws_security_group.myce_sg_bastion"
          ]
        }
      ]
    },
    {
      "module": "module.sg_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_security_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3575295682",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-northeast-2",
            "security_group_id": "sg-0ecb51db21832e19b",
            "security_group_rule_id": "sgr-0e1db9379913c83a9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc",
            "module.sg_groups.aws_security_group.myce_sg_bastion"
          ]
        }
      ]
    },
    {
      "module": "module.sg_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nat_security_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2936213724",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-2",
            "security_group_id": "sg-037c5b2a31a4c9011",
            "security_group_rule_id": "sgr-016d140e131fbd0a4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc",
            "module.sg_groups.aws_security_group.myce_sg_nat"
          ]
        }
      ]
    },
    {
      "module": "module.sg_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nat_security_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3868074028",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-northeast-2",
            "security_group_id": "sg-037c5b2a31a4c9011",
            "security_group_rule_id": "sgr-07bcf52c4dd7630a3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc",
            "module.sg_groups.aws_security_group.myce_sg_nat"
          ]
        }
      ]
    },
    {
      "module": "module.sg_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_security_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2631685679",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-2",
            "security_group_id": "sg-075797ab705810c96",
            "security_group_rule_id": "sgr-0452b502226601fd6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc",
            "module.sg_groups.aws_security_group.myce_sg_public"
          ]
        }
      ]
    },
    {
      "module": "module.sg_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_security_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-710282138",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-2",
            "security_group_id": "sg-075797ab705810c96",
            "security_group_rule_id": "sgr-096e1fb8844b61b36",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc",
            "module.sg_groups.aws_security_group.myce_sg_public"
          ]
        }
      ]
    },
    {
      "module": "module.sg_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_security_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-3012341223",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-2",
            "security_group_id": "sg-075797ab705810c96",
            "security_group_rule_id": "sgr-0cdf94096ce97544f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc",
            "module.sg_groups.aws_security_group.myce_sg_public"
          ]
        }
      ]
    },
    {
      "module": "module.sg_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_security_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3084028791",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-northeast-2",
            "security_group_id": "sg-075797ab705810c96",
            "security_group_rule_id": "sgr-06e79aa6ef92252f4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc",
            "module.sg_groups.aws_security_group.myce_sg_public"
          ]
        }
      ]
    },
    {
      "module": "module.sg_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "security_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-2082422932",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-2",
            "security_group_id": "sg-053e972ea36b36908",
            "security_group_rule_id": "sgr-0641a3155cb399937",
            "self": false,
            "source_security_group_id": "sg-075797ab705810c96",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc",
            "module.sg_groups.aws_security_group.myce_sg",
            "module.sg_groups.aws_security_group.myce_sg_public"
          ]
        }
      ]
    },
    {
      "module": "module.sg_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "security_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8080,
            "id": "sgrule-85443510",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-2",
            "security_group_id": "sg-053e972ea36b36908",
            "security_group_rule_id": "sgr-04d7b5adddfd8480f",
            "self": false,
            "source_security_group_id": "sg-075797ab705810c96",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc",
            "module.sg_groups.aws_security_group.myce_sg",
            "module.sg_groups.aws_security_group.myce_sg_public"
          ]
        }
      ]
    },
    {
      "module": "module.sg_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "security_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-463790652",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-northeast-2",
            "security_group_id": "sg-053e972ea36b36908",
            "security_group_rule_id": "sgr-0e7e0c13923e56b09",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc",
            "module.sg_groups.aws_security_group.myce_sg"
          ]
        }
      ]
    },
    {
      "module": "module.sg_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "security_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-4053611446",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-2",
            "security_group_id": "sg-053e972ea36b36908",
            "security_group_rule_id": "sgr-0421a648f8bccfbbf",
            "self": false,
            "source_security_group_id": "sg-0ecb51db21832e19b",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc",
            "module.sg_groups.aws_security_group.myce_sg",
            "module.sg_groups.aws_security_group.myce_sg_bastion"
          ]
        }
      ]
    }
  ]
}